--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,47 @@
   box-sizing: border-box;
 }
 
+
+nav ul{
+    display:flex;
+    justify-content: end;
+    flex-wrap: wrap;
+    gap: 8px;
+
+    border: 3px solid red;
+    list-style: none;
+    padding:5px;
+
+
+    
+}
+
+li{
+    border: 2px solid red;
+    background: #004aad;
+    
+}
+
+nav a{
+     padding: 5px;
+     margin: 5px;
+     /* display:inline-block; */
+
+     font: bold 1em helvetica;
+      text-decoration: none;
+      color:whitesmoke;
+      transition: transform 0.3s ease, color 0.3s ease;
+}
+
+a:hover{
+    color: goldenrod;
+    transform: scale(1.3);
+}
+
 .hero-pic{
-    width: 250px;
-    border-radius: 50%;
+    
+    width: 300px;
+    border-radius: 10%;
 }
 
 /* therme royal purple */
@@ -30,35 +68,7 @@ h2{
     color:magenta;
 }
 
-.main-nav ul{
-    display:flex;
-    justify-content: end;
-    flex-wrap: wrap;
-    gap: 8px;
 
-    border: 3px solid red;
-    list-style: none;
-    padding:5px;
-
-   
-    
-}
-
-nav a{
-     padding: 5px;
-     margin: 5px;
-     /* display:inline-block; */
-
-     font: bold 1em helvetica;
-      text-decoration: none;
-      color:rgb(16, 3, 19);
-      transition: transform 0.3s ease, color 0.3s ease;
-}
-
-a:hover{
-    color: goldenrod;
-    transform: scale(1.3);
-}
 
 /* hero section */
 
